add base css style

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <script src="./js/main.js" defer></script>
     <title>Decbase</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper"></div>
+  </body>
 </html>
