--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
     <title>Decbase</title>
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <header class="header header__container">
+        <a href="#" class="header-logo"
+          ><img
+            src="./img/header-logo.png"
+            alt="logo decbase"
+            class="header-logo__img"
+        /></a>
+        <nav class="header__nav header-nav">
+          <ul class="header-nav__menu nav-menu">
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">HOME</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">PROJECT</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">SERVICES</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">ABOUT</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">BLOG</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">SHOP</a>
+            </li>
+            <li class="nav-menu__item">
+              <a href="#" class="nav-menu__link">CONTACT</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="header__btn">Sign Up</button>
+      </header>
+    </div>
   </body>
 </html>
