add style header nav and header__btn

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="header__nav header-nav">
           <ul class="header-nav__menu nav-menu">
             <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">HOME</a>
+              <a href="#" class="nav-menu__link nav-menu__link_active">HOME</a>
             </li>
             <li class="nav-menu__item">
               <a href="#" class="nav-menu__link">PROJECT</a>
