--- a/index.html
+++ b/index.html
@@ -24,29 +24,36 @@
             class="header-logo__img"
         /></a>
         <nav class="header__nav header-nav">
-          <ul class="header-nav__menu nav-menu">
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link nav-menu__link_active">HOME</a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">PROJECT</a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">SERVICES</a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">ABOUT</a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">BLOG</a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">SHOP</a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link">CONTACT</a>
-            </li>
-          </ul>
+          <div class="menu-burger">
+            <input type="checkbox" name="" id="menu" />
+            <label for="menu"><span></span></label>
+
+            <ul class="header-nav__menu nav-menu">
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link nav-menu__link_active"
+                  >HOME</a
+                >
+              </li>
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link">PROJECT</a>
+              </li>
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link">SERVICES</a>
+              </li>
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link">ABOUT</a>
+              </li>
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link">BLOG</a>
+              </li>
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link">SHOP</a>
+              </li>
+              <li class="nav-menu__item">
+                <a href="#" class="nav-menu__link">CONTACT</a>
+              </li>
+            </ul>
+          </div>
         </nav>
         <button class="header__btn">Sign Up</button>
       </header>
