add section project and styles section project

--- a/index.html
+++ b/index.html
@@ -57,6 +57,29 @@
         </nav>
         <button class="header__btn">Sign Up</button>
       </header>
+      <main class="main">
+        <section class="project project__container">
+          <div class="project__info project-info">
+            <h4 class="project-info__subtitle">MODERN INTERIOR</h4>
+            <h2 class="project-info__title">Create Your Interior Design.</h2>
+            <div class="project-info__text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation.
+              </p>
+            </div>
+            <button type="button" class="project-info__button decbase-btn">
+              CONTACT
+            </button>
+          </div>
+
+          <div class="project__img project-img">
+            <img src="./img/interior.jpg" alt="interior" />
+          </div>
+          <img class="project__pattern" src="./img/Group54.svg" alt="" />
+        </section>
+      </main>
     </div>
   </body>
 </html>
