finish section about

--- a/index.html
+++ b/index.html
@@ -182,6 +182,30 @@
             </div>
           </div>
         </section>
+
+        <section class="about about__container">
+          <div class="about-img">
+            <img src="/img/about-img.jpg" alt="interioris" />
+          </div>
+
+          <div class="about-info">
+            <h4 class="about-info__subtitle">ABOUT US</h4>
+            <h2 class="about-info__title">
+              Interioris The Will of An Epoch Mextreo
+            </h2>
+            <p class="about-info__text">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form injected
+              humour, or randomised words which don't look even slightly
+              believable.If you are going to use a passage of Lorem Ipsum, sure
+              there isn't anything embarrassing hidden the middleof text. All
+              the Lorem Ipsum generators on the Internettend to repeat
+              predefined chunks as necessary,making this the first true
+              generator on the Internet.
+            </p>
+            <button class="about-info__btn decbase-btn">LEARN MORE</button>
+          </div>
+        </section>
       </main>
     </div>
   </body>
