add section market

--- a/index.html
+++ b/index.html
@@ -206,6 +206,24 @@
             <button class="about-info__btn decbase-btn">LEARN MORE</button>
           </div>
         </section>
+
+        <section class="market market__container">
+          <div class="market-info">
+            <div class="market-info__years">20</div>
+            <h4 class="market-info__title">
+              Years Of Successful<br />
+              Working<br />
+              The Market
+            </h4>
+            <button type="button" class="market-info__btn decbase-btn">
+              READ MORE
+            </button>
+          </div>
+
+          <div class="market-img">
+            <img src="./img/market.jpg" alt="market" />
+          </div>
+        </section>
       </main>
     </div>
   </body>
