--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
               </div>
             </div>
             <div class="swiper-button-block">
-              <div class="swiper-button-prev">
+              <div class="swiper-button-prev service-prev">
                 <img src="./img/slider-arrow.png" alt="arrow prev" />
               </div>
-              <div class="swiper-button-next">
+              <div class="swiper-button-next service-next">
                 <img src="./img/slider-arrow.png" alt="arrow next" />
               </div>
             </div>
@@ -209,7 +209,9 @@
 
         <section class="market market__container">
           <div class="market-info">
-            <div class="market-info__years">20</div>
+            <div class="market-info__years">
+              <img src="./img/years.png" alt="20" />
+            </div>
             <h4 class="market-info__title">
               Years Of Successful<br />
               Working<br />
@@ -222,6 +224,276 @@
 
           <div class="market-img">
             <img src="./img/market.jpg" alt="market" />
+          </div>
+        </section>
+
+        <section class="work">
+          <div class="work-block work__container">
+            <h4 class="work-block__title">
+              3000+ Completed Work <br />
+              Which WE have Successfully Done
+            </h4>
+
+            <div class="work-block__info work-info">
+              <div class="work-info__item work-info__item_start">
+                <span class="work-info__item_number">980</span
+                ><span class="work-info__item_title">Project</span>
+              </div>
+              <img
+                class="work-info__item_line"
+                src="./img/line-down.svg"
+                alt="line-work"
+              />
+              <div class="work-info__item work-info__item_end">
+                <span class="work-info__item_number">520</span
+                ><span class="work-info__item_title">Happy Client</span>
+              </div>
+              <img
+                class="work-info__item_line"
+                src="./img/line-up.svg"
+                alt="line-work"
+              />
+              <div class="work-info__item work-info__item_start">
+                <span class="work-info__item_number">330</span
+                ><span class="work-info__item_title">Winners</span>
+              </div>
+              <img
+                class="work-info__item_line"
+                src="./img/line-down.svg"
+                alt="line-work"
+              />
+              <div class="work-info__item work-info__item_end">
+                <span class="work-info__item_number">120</span
+                ><span class="work-info__item_title">Recoment</span>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="reviews">
+          <div class="reviews-block reviews__contaier">
+            <h5 class="reviews-block__subtitle">TESTIMONIALS</h5>
+            <h4 class="reviews-block__title">Client says about us</h4>
+
+            <div class="swiper reviews-slider">
+              <div class="swiper-wrapper reviews-slider-wrapper">
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/louis.jpg"
+                      alt="Louis Saville"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Louis Saville <span>/CEO at Google inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/rekha.jpg"
+                      alt="Rekha Varadwaz"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Rekha Varadwaz<span>/Manager at Nike inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/louis.jpg"
+                      alt="Louis Saville"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Louis Saville <span>/CEO at Google inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/rekha.jpg"
+                      alt="Rekha Varadwaz"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Rekha Varadwaz<span>/Manager at Nike inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/louis.jpg"
+                      alt="Louis Saville"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Louis Saville <span>/CEO at Google inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/rekha.jpg"
+                      alt="Rekha Varadwaz"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Rekha Varadwaz<span>/Manager at Nike inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/louis.jpg"
+                      alt="Louis Saville"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Louis Saville <span>/CEO at Google inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="swiper-slide reviews-slider__slide reviews-slide">
+                  <div class="reviews-slide-wrapper">
+                    <img
+                      class="reviews-slide__icon"
+                      src="/img/rekha.jpg"
+                      alt="Rekha Varadwaz"
+                    />
+                    <h5 class="reviews-slide__title">
+                      Rekha Varadwaz<span>/Manager at Nike inc</span
+                      ><span class="reviews-slide__brackets"
+                        ><img src="./img/brackets.png" alt=""
+                      /></span>
+                    </h5>
+                    <p class="reviews-slide__text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="swiper-button-block">
+                <div class="swiper-button-prev reviews-prev">
+                  <img src="./img/slider-arrow.png" alt="arrow prev" />
+                </div>
+                <div class="swiper-button-next reviews-next">
+                  <img src="./img/slider-arrow.png" alt="arrow next" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="blog">
+          <div class="blog__container blog-wrapper">
+            <h4 class="blog__subtitle">LETEST NEWS</h4>
+            <h2 class="blog__title">From Our Blog</h2>
+            <div class="blog__items">
+              <div class="blog__item blog-item">
+                <div class="blog-item__img">
+                  <img src="./img/blog-trends.jpg" alt="Trends" />
+                </div>
+                <h4 class="blog-item__title">2020 Interior Design Trends</h4>
+                <div class="blog-item__text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod incididunt ut labore et dolore magna aliqua.
+                  </p>
+                </div>
+                <button class="blog-item__btn decbase-btn" type="button">
+                  CONTINUE READING....
+                </button>
+              </div>
+
+              <div class="blog__item blog-item">
+                <div class="blog-item__img">
+                  <img src="./img/blog-notable.jpg" alt="notable" />
+                </div>
+                <h4 class="blog-item__title">
+                  28 Notable Product at ARC Interior Design
+                </h4>
+                <div class="blog-item__text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod incididunt ut labore et dolore magna aliqua.
+                  </p>
+                </div>
+                <button class="blog-item__btn decbase-btn">
+                  CONTINUE READING....
+                </button>
+              </div>
+            </div>
           </div>
         </section>
       </main>
