--- a/index.html
+++ b/index.html
@@ -496,6 +496,22 @@
             </div>
           </div>
         </section>
+
+        <section class="sign-up sign-up__container">
+          <h2 class="sign-up__title">DON’T FORGET TO SIGN UP</h2>
+          <p class="sign-up__text">
+            Find out early about all upcoming promotions and new product
+            releases with our newsletter.
+          </p>
+          <form class="sign-up__form" action="#">
+            <input
+              class="sign-up__input"
+              type="email"
+              placeholder="Enter your email address....."
+            />
+            <input class="sign-up__btn" type="submit" value="SUBSCRIBE" />
+          </form>
+        </section>
       </main>
     </div>
   </body>
