--- a/index.html
+++ b/index.html
@@ -513,6 +513,117 @@
           </form>
         </section>
       </main>
+
+      <footer class="footer">
+        <div class="footer-wrapper footer__container">
+          <div class="footer-info">
+            <div class="footer-info__logo-footer footer-logo-block">
+              <a href="#" class="header-logo footer-logo"
+                ><img
+                  src="./img/header-logo.png"
+                  alt="logo decbase"
+                  class="header-logo__img"
+              /></a>
+              <p class="footer-logo-block__text">
+                But i must explain to you all this mistaken idea of dencouncing
+                pleasure.
+              </p>
+            </div>
+
+            <div class="footer-info__quick quick">
+              <h4 class="quick__title">Quick Links</h4>
+              <ul class="quick__items">
+                <li class="quick_item">
+                  <a href="#" class="quick link">About Our Company</a>
+                </li>
+                <li class="quick_item">
+                  <a href="#" class="quick link">Services WE provide</a>
+                </li>
+                <li class="quick_item">
+                  <a href="#" class="quick link">Career & Opportunity</a>
+                </li>
+                <li class="quick_item">
+                  <a href="#" class="quick link">Privacy & policy</a>
+                </li>
+                <li class="quick_item">
+                  <a href="#" class="quick link">Contact US</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer-company company">
+              <h4 class="company__title">Company</h4>
+              <ul class="company__items">
+                <li class="company__item">
+                  <a href="#" class="company__link">About Company</a>
+                </li>
+                <li class="company__item">
+                  <a href="#" class="company__link">Our Testimonials</a>
+                </li>
+                <li class="company__item">
+                  <a href="#" class="company__link">Latest News</a>
+                </li>
+                <li class="company__item">
+                  <a href="#" class="company__link">Our misson</a>
+                </li>
+                <li class="company__item">
+                  <a href="#" class="company__link">Get a free Quot</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__contact contact">
+              <h4 class="contact__title">Contact us</h4>
+              <ul class="contact__items">
+                <li class="contact__item">
+                  <a href="#" class="contact__link">Sagrada Familia, Herba</a>
+                </li>
+                <li class="contact__item">
+                  <a href="#" class="contact__link">Street Front USA</a>
+                </li>
+                <li class="contact__item">
+                  <a href="#" class="contact__link">brandoxide@gmail.com</a>
+                </li>
+                <li class="contact__item">
+                  <a href="#" class="contact__link">002-568423591</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__follow follow">
+              <h4 class="follow__title">Follow Us</h4>
+              <ul class="follow__items">
+                <li class="follow__item">
+                  <a href="#" class="follow__link"
+                    ><img src="./img/icon-facebook.png" alt="facebook"
+                  /></a>
+                </li>
+                <li class="follow__item">
+                  <a href="#" class="follow__link"
+                    ><img src="./img/icon-twitter.png" alt="twitter"
+                  /></a>
+                </li>
+                <li class="follow__item">
+                  <a href="#" class="follow__link"
+                    ><img src="./img/icon-instagram.png" alt="instagram"
+                  /></a>
+                </li>
+                <li class="follow__item">
+                  <a href="#" class="follow__link"
+                    ><img src="./img/icon-linkedin.png" alt="linkedin"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-copyright">
+          <a class="footer-copyright__link" href="#"
+            >Copyright @ 2020 <span>Brandoxide</span>.all right reserved.</a
+          >
+        </div>
+      </footer>
     </div>
   </body>
 </html>
